; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_resp_create.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_resp_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_http_msg = type { i32, i32*, i32*, i64, i32*, i32*, i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vlc_http_msg* @vlc_http_resp_create(i32 %0) #0 {
  %2 = alloca %struct.vlc_http_msg*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.vlc_http_msg*, align 8
  store i32 %0, i32* %3, align 4
  %5 = call %struct.vlc_http_msg* @malloc(i32 64)
  store %struct.vlc_http_msg* %5, %struct.vlc_http_msg** %4, align 8
  %6 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %7 = icmp eq %struct.vlc_http_msg* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i64 @unlikely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store %struct.vlc_http_msg* null, %struct.vlc_http_msg** %2, align 8
  br label %35

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = icmp ult i32 %13, 1000
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %19 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 8
  %20 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %21 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %20, i32 0, i32 7
  store i32* null, i32** %21, align 8
  %22 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %23 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %22, i32 0, i32 6
  store i32* null, i32** %23, align 8
  %24 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %25 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %24, i32 0, i32 5
  store i32* null, i32** %25, align 8
  %26 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %27 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %26, i32 0, i32 4
  store i32* null, i32** %27, align 8
  %28 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %29 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %28, i32 0, i32 3
  store i64 0, i64* %29, align 8
  %30 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %31 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %30, i32 0, i32 2
  store i32* null, i32** %31, align 8
  %32 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  %33 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %32, i32 0, i32 1
  store i32* null, i32** %33, align 8
  %34 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %4, align 8
  store %struct.vlc_http_msg* %34, %struct.vlc_http_msg** %2, align 8
  br label %35

35:                                               ; preds = %12, %11
  %36 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %2, align 8
  ret %struct.vlc_http_msg* %36
}

declare dso_local %struct.vlc_http_msg* @malloc(i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
